# compond_interest_core

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
api/: app 2.py  app.py
core/: investment_calculator.py  withdrawal_simulation.py
market_data/: market_analysis_results.csv  market_data.py
notebooks/: .env  alpha_vantage_api.ipynb  compound interest calculator.ipynb  rate_numerical_optimization.ipynb
